--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -2,4 +2,4 @@
 
 {% block title %}Welcome!{% endblock %}
 
-{% block content %}Welcome!{% endblock %}
+{% block content %}<h1>Hello!</h1>{% endblock %}
