Refactor model "Baby" as "Child".

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -25,8 +25,8 @@
             <li class="nav-item{% if request.path == '/' %} active{% endif %}">
                 <a class="nav-link" href="{% url 'index' %}">Home</a>
             </li>
-            <li class="nav-item{% if request.path == '/baby/add/' %} active{% endif %}">
-                <a class="nav-link" href="{% url 'baby-add' %}">Add Baby</a>
+            <li class="nav-item{% if request.path == '/child/add/' %} active{% endif %}">
+                <a class="nav-link" href="{% url 'child-add' %}">Add Child</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
