--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -27,16 +27,31 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item{% if request.path == '/' %} active{% endif %}">
-                <a class="nav-link" href="{% url 'index' %}">Home</a>
+                <a class="nav-link" href="{% url 'index' %}"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
             </li>
             <li class="nav-item{% if request.path == '/children/' %} active{% endif %}">
-                <a class="nav-link" href="{% url 'child-list' %}">Children</a>
+                <a class="nav-link" href="{% url 'child-list' %}"><i class="fa fa-child" aria-hidden="true"></i> Children</a>
+            </li>
+            <li class="nav-item{% if request.path == '/changes/' %} active{% endif %}">
+                <a class="nav-link" href="{% url 'diaperchange-list' %}"><i class="fa fa-trash" aria-hidden="true"></i> Changes</a>
+            </li>
+            <li class="nav-item{% if request.path == '/feedings/' %} active{% endif %}">
+                <a class="nav-link" href="{% url 'feeding-list' %}"><i class="fa fa-spoon" aria-hidden="true"></i> Feedings</a>
+            </li>
+            <li class="nav-item{% if request.path == '/sleep/' %} active{% endif %}">
+                <a class="nav-link" href="{% url 'sleep-list' %}"><i class="fa fa-bed" aria-hidden="true"></i> Sleep</a>
+            </li>
+            <li class="nav-item{% if request.path == '/tummy-time/' %} active{% endif %}">
+                <a class="nav-link" href="{% url 'tummytime-list' %}"><i class="fa fa-smile-o" aria-hidden="true"></i> Tummy Time</a>
+            </li>
+            <li class="nav-item{% if request.path == '/notes/' %} active{% endif %}">
+                <a class="nav-link" href="{% url 'note-list' %}"><i class="fa fa-sticky-note" aria-hidden="true"></i> Notes</a>
             </li>
         </ul>
     </div>
 </nav>
 
-<div class="container" style="padding: 3rem 1.5rem;">
+<div class="container-fluid">
     {% block content %}{% endblock %}
 </div>
 </body>
