--- a/core/templates/core/child_list.html
+++ b/core/templates/core/child_list.html
@@ -1,40 +1,42 @@
 {% extends 'core/base.html' %}
-{% load i18n widget_tweaks %}
+{% load widget_tweaks %}
 
 {% block title %}Children{% endblock %}
 
 {% block content %}
     <h1>Children</h1>
-    <table class="table table-striped table-hover">
-        <thead class="thead-inverse">
-            <tr>
-                <th>#</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Birth Date</th>
-                <th class="text-center">Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for child in object_list %}
+    <div class="table-responsive">
+        <table class="table table-striped table-hover">
+            <thead class="thead-inverse">
                 <tr>
-                    <th scope="row">{{ child.id }}</th>
-                    <td><a href="{% url 'child-update' child.id %}">{{ child.first_name }}</a></td>
-                    <td>{{ child.last_name }}</td>
-                    <td>{{ child.birth_date }}</td>
-                    <td class="text-center">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="Child actions">
-                            <a href="{% url 'child-update' child.id %}" class="btn btn-primary"><i class="fa fa-pencil" aria-hidden="true"></i></a>
-                            <a href="{% url 'child-delete' child.id %}" class="btn btn-danger"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-                        </div>
-                    </td>
+                    <th>#</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Birth Date</th>
+                    <th class="text-center">Actions</th>
                 </tr>
-            {% empty %}
-                <tr>
-                    <th colspan="4">No children added.</th>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for child in object_list %}
+                    <tr>
+                        <th scope="row">{{ child.id }}</th>
+                        <td><a href="{% url 'child-update' child.id %}">{{ child.first_name }}</a></td>
+                        <td>{{ child.last_name }}</td>
+                        <td>{{ child.birth_date }}</td>
+                        <td class="text-center">
+                            <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
+                                <a href="{% url 'child-update' child.id %}" class="btn btn-primary"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+                                <a href="{% url 'child-delete' child.id %}" class="btn btn-danger"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+                            </div>
+                        </td>
+                    </tr>
+                {% empty %}
+                    <tr>
+                        <th colspan="4">No children found.</th>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
     <a href="{% url 'child-add' %}" class="btn btn-sm btn-success"><i class="fa fa-child" aria-hidden="true"></i> Add a Child</a>
 {% endblock %}
