--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
           integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
-          crossorigin="anonymous">
+          crossorigin="anonymous" />
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-          crossorigin="anonymous">
+          crossorigin="anonymous" />
 </head>
 <body style="padding-top: 5rem;">
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -52,7 +52,13 @@
 </nav>
 
 <div id="view-{{ request.resolver_match.view_name }}" class="container-fluid">
-    {% block content %}{% endblock %}
+    <div class="row justify-content-md-center">
+        <div class="col-lg-8">
+            {% block content %}{% endblock %}
+        </div>
+    </div>
 </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
 </html>
