Add Tempus Dominus date/time picker library and use for Baby birth date.

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +15,7 @@
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
           crossorigin="anonymous" />
+    <link rel="stylesheet" href="{% static "css/tempusdominus-bootstrap-4.min.css" %}" />
 </head>
 <body style="padding-top: 5rem;">
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -60,5 +63,10 @@
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"
+        integrity="sha256-1hjUhpc44NwiNg8OwMu2QzJXhD8kcj+sJA3aCQZoUjg="
+        crossorigin="anonymous"></script>
+<script src="{% static "js/tempusdominus-bootstrap-4.min.js" %}"></script>
+{% block javascript %}{% endblock %}
 </body>
 </html>
