--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -19,7 +19,7 @@
 </head>
 <body style="padding-top: 5rem;">
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#"><span class="text-info">Baby</span> Blotter</a>
+    <a class="navbar-brand" href="/"><span class="text-info">Baby</span> Blotter</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarsExampleDefault"
             aria-controls="navbarsExampleDefault" aria-expanded="false"
