--- a/core/templates/timer_list.html
+++ b/core/templates/timer_list.html
@@ -1,3 +1,3 @@
 {% for timer in timers %}
-    {{ timer.name }} ({{ timer.duration }})
+    {{ timer.name }} ({{ timer.duration }})<br/>
 {% endfor %}
