Add ability to create a Timer.

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -62,6 +62,7 @@
         </div>
         <div class="col-lg-2">
             <h1>Timers</h1>
+            {% add_timer request.path %}
             {% list_timers %}
         </div>
     </div>
