Fix URLs configuration to prevent namespace issues between api and core apps.

--- a/core/templates/timer_list.html
+++ b/core/templates/timer_list.html
@@ -4,7 +4,7 @@
         <div class="card-body text-success">
             <h4 class="card-text">{{ timer.duration }}</h4>
         </div>
-        <div class="card-footer text-muted">
+        <div class="card-footer text-muted small">
             Started {{ timer.start }}
         </div>
     </div>
