--- a/core/templates/core/sleep_list.html
+++ b/core/templates/core/sleep_list.html
@@ -27,8 +27,19 @@
                         <td>{{ sleep.duration }}</td>
                         <td class="text-center">
                             <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
-                                <a href="{% url 'sleep-update' sleep.id %}" class="btn btn-primary"><i class="fa fa-pencil" aria-hidden="true"></i></a>
-                                <a href="{% url 'sleep-delete' sleep.id %}" class="btn btn-danger"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+
+                                {% if perms.core.change_sleep %}
+                                    <a href="{% url 'sleep-update' sleep.id %}" class="btn btn-primary">
+                                        <i class="fa fa-pencil" aria-hidden="true"></i>
+                                    </a>
+                                {% endif %}
+
+                                {% if perms.core.delete_sleep %}
+                                    <a href="{% url 'sleep-delete' sleep.id %}" class="btn btn-danger">
+                                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                                    </a>
+                                {% endif %}
+
                             </div>
                         </td>
                     </tr>
@@ -40,5 +51,11 @@
             </tbody>
         </table>
     </div>
-    <a href="{% url 'sleep-add' %}" class="btn btn-sm btn-success"><i class="fa fa-bed" aria-hidden="true"></i> Add a Sleep Entry</a>
+
+    {% if perms.core.add_sleep %}
+        <a href="{% url 'sleep-add' %}" class="btn btn-sm btn-success">
+            <i class="fa fa-bed" aria-hidden="true"></i> Add a Sleep Entry
+        </a>
+    {% endif %}
+
 {% endblock %}
