--- a/core/templates/timer_list.html
+++ b/core/templates/timer_list.html
@@ -5,7 +5,7 @@
             <h4 class="card-text">{{ timer.duration }}</h4>
         </div>
         <div class="card-footer text-muted small">
-            Started {{ timer.start }}
+            {{ timer.start }}
         </div>
     </div>
 {% endfor %}
