--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -31,26 +31,58 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item{% if request.path == '/' %} active{% endif %}">
-                <a class="nav-link" href="{% url 'index' %}"><i class="fa fa-dashboard" aria-hidden="true"></i> Dashboard</a>
+                <a class="nav-link" href="{% url 'index' %}">
+                    <i class="fa fa-dashboard" aria-hidden="true"></i> Dashboard
+                </a>
             </li>
-            <li class="nav-item{% if request.path == '/children/' %} active{% endif %}">
-                <a class="nav-link" href="{% url 'child-list' %}"><i class="fa fa-child" aria-hidden="true"></i> Children</a>
-            </li>
-            <li class="nav-item{% if request.path == '/changes/' %} active{% endif %}">
-                <a class="nav-link" href="{% url 'diaperchange-list' %}"><i class="fa fa-trash" aria-hidden="true"></i> Changes</a>
-            </li>
-            <li class="nav-item{% if request.path == '/feedings/' %} active{% endif %}">
-                <a class="nav-link" href="{% url 'feeding-list' %}"><i class="fa fa-spoon" aria-hidden="true"></i> Feedings</a>
-            </li>
-            <li class="nav-item{% if request.path == '/sleep/' %} active{% endif %}">
-                <a class="nav-link" href="{% url 'sleep-list' %}"><i class="fa fa-bed" aria-hidden="true"></i> Sleep</a>
-            </li>
-            <li class="nav-item{% if request.path == '/tummy-time/' %} active{% endif %}">
-                <a class="nav-link" href="{% url 'tummytime-list' %}"><i class="fa fa-smile-o" aria-hidden="true"></i> Tummy Time</a>
-            </li>
-            <li class="nav-item{% if request.path == '/notes/' %} active{% endif %}">
-                <a class="nav-link" href="{% url 'note-list' %}"><i class="fa fa-sticky-note" aria-hidden="true"></i> Notes</a>
-            </li>
+
+            {% if perms.core.view_child %}
+                <li class="nav-item{% if request.path == '/children/' %} active{% endif %}">
+                    <a class="nav-link" href="{% url 'child-list' %}">
+                        <i class="fa fa-child" aria-hidden="true"></i> Children
+                    </a>
+                </li>
+            {% endif %}
+
+            {% if perms.core.view_diaperchange %}
+                <li class="nav-item{% if request.path == '/changes/' %} active{% endif %}">
+                    <a class="nav-link" href="{% url 'diaperchange-list' %}">
+                        <i class="fa fa-trash" aria-hidden="true"></i> Changes
+                    </a>
+                </li>
+            {% endif %}
+
+            {% if perms.core.view_feeding %}
+                <li class="nav-item{% if request.path == '/feedings/' %} active{% endif %}">
+                    <a class="nav-link" href="{% url 'feeding-list' %}">
+                        <i class="fa fa-spoon" aria-hidden="true"></i> Feedings
+                    </a>
+                </li>
+            {% endif %}
+
+            {% if perms.core.view_sleep %}
+                <li class="nav-item{% if request.path == '/sleep/' %} active{% endif %}">
+                    <a class="nav-link" href="{% url 'sleep-list' %}">
+                        <i class="fa fa-bed" aria-hidden="true"></i> Sleep
+                    </a>
+                </li>
+            {% endif %}
+
+            {% if perms.core.view_tummytime %}
+                <li class="nav-item{% if request.path == '/tummy-time/' %} active{% endif %}">
+                    <a class="nav-link" href="{% url 'tummytime-list' %}">
+                        <i class="fa fa-smile-o" aria-hidden="true"></i> Tummy Time
+                    </a>
+                </li>
+            {% endif %}
+
+            {% if perms.core.view_note %}
+                <li class="nav-item{% if request.path == '/notes/' %} active{% endif %}">
+                    <a class="nav-link" href="{% url 'note-list' %}">
+                        <i class="fa fa-sticky-note" aria-hidden="true"></i> Notes
+                    </a>
+                </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
@@ -60,11 +92,15 @@
         <div class="col-lg-8 mb-4">
             {% block content %}{% endblock %}
         </div>
-        <div class="col-lg-2">
-            <h1>Timers</h1>
-            {% add_timer request.path %}
-            {% list_timers %}
-        </div>
+        {% if perms.core.view_timer %}
+            <div class="col-lg-2">
+                <h1>Timers</h1>
+                {% if perms.core.add_timer %}
+                    {% add_timer request.path %}
+                {% endif %}
+                {% list_timers %}
+            </div>
+        {% endif %}
     </div>
 </div>
 
