Refactor overall template structure.

--- a/core/templates/core/child_list.html
+++ b/core/templates/core/child_list.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'babyblotter/page.html' %}
 {% load widget_tweaks %}
 
 {% block title %}Children{% endblock %}
