--- a/babyblotter/templates/babyblotter/nav-dropdown.html
+++ b/babyblotter/templates/babyblotter/nav-dropdown.html
@@ -1,4 +1,5 @@
 {% extends 'babyblotter/base.html' %}
+{% load timers %}
 
 {% block nav %}
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -23,7 +24,7 @@
                        id="nav-activity-menu-link"
                        data-toggle="dropdown"
                        aria-haspopup="true"
-                       aria-expanded="false"><i class="fa fa-child" aria-hidden="true"></i> Activites</a>
+                       aria-expanded="false"><i class="fa fa-child" aria-hidden="true"></i> Activities</a>
                     <div class="dropdown-menu" aria-labelledby="nav-activity-menu-link">
 
                         {% if perms.core.view_diaperchange %}
@@ -78,6 +79,10 @@
 
                     </div>
                 </li>
+
+                {% if perms.core.view_timer %}
+                    {% timer_nav %}
+                {% endif %}
             </ul>
         </div>
     </nav>
