--- a/core/templates/core/child_list.html
+++ b/core/templates/core/child_list.html
@@ -27,13 +27,13 @@
                             <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
 
                                 {% if perms.core.change_child %}
-                                    <a href="{% url 'child-update' child.id %}" class="btn btn-primary">
+                                    <a href="{% url 'child-update' child.slug %}" class="btn btn-primary">
                                         <i class="fa fa-pencil" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
 
                                 {% if perms.core.delete_child %}
-                                    <a href="{% url 'child-delete' child.id %}" class="btn btn-danger">
+                                    <a href="{% url 'child-delete' child.slug %}" class="btn btn-danger">
                                         <i class="fa fa-trash-o" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
