Add a Last Diaper Change card.

--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -11,7 +11,7 @@
                 {% card_feeding_last object %}
             </div>
             <div class="col-sm-12 col-md-4">
-                last feeding
+                {% card_diaperchange_last object %}
             </div>
             <div class="col-sm-12 col-md-4">
                 change statistics
