--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -5,28 +5,10 @@
 
 {% block content %}
     <h1 class="text-center">{{ object }}</h1>
-    <div class="container">
-        <div class="row align-items-start text-center">
-            <div class="col-sm-12 col-md-4">
-                {% card_feeding_last object %}
-            </div>
-            <div class="col-sm-12 col-md-4">
-                {% card_diaperchange_last object %}
-            </div>
-            <div class="col-sm-12 col-md-4">
-                change statistics
-            </div>
-        </div>
-        <div class="row align-items-start text-center">
-            <div class="col-sm-12 col-md-4">
-                tummy time for the day
-            </div>
-            <div class="col-sm-12 col-md-4">
-                available
-            </div>
-            <div class="col-sm-12 col-md-4">
-                available
-            </div>
-        </div>
+    <div class="card-columns">
+        {% card_feeding_last object %}
+        {% card_diaperchange_last object %}
+        {% card_tummytime_last object %}
+        {% card_sleep_last object %}
     </div>
 {% endblock %}
