--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -10,5 +10,6 @@
         {% card_diaperchange_last object %}
         {% card_tummytime_last object %}
         {% card_sleep_last object %}
+        {% card_diaperchange_types object %}
     </div>
 {% endblock %}
