--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -9,6 +9,7 @@
         {% card_feeding_last object %}
         {% card_diaperchange_last object %}
         {% card_tummytime_last object %}
+        {% card_tummytime_day object %}
         {% card_sleep_last object %}
         {% card_diaperchange_types object %}
     </div>
